Refs #2792 fix bug: Period and Bubble size (Oz axis) were not properly aligned, on chart page

--- a/scoreboard/theme/static/css/custom.css
+++ b/scoreboard/theme/static/css/custom.css
@@ -530,6 +530,7 @@ body .docsTable th {
   background: #E6F5FD;
   border: 3px solid #FFF;
   margin-bottom: 10px;
+  padding-bottom: 10px;
 }
 
 .upper-filters,
@@ -540,13 +541,11 @@ body .docsTable th {
 
 .bottom-left {
   float: left;
-  width: 470px;
   display: inline-block;
 }
 
 .bottom-right {
   float: right !important;
-  width: 630px;
   display: inline-block;
 }
 
